--- a/about.html
+++ b/about.html
@@ -68,6 +68,12 @@
                 </a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="service.html">Service</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="detailing.html">Detailing</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="cars.html">Cars</a>
               </li>
               <li class="nav-item">
