--- a/detailing.html
+++ b/detailing.html
@@ -105,63 +105,32 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h1>Team</h1>
-            <span>Our professional team members</span>
+            <h1>Detailing</h1>
+            <span>Protect Your Vehicle with our Mobile Detailing Services</span>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="team" style="margin: 0">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="section-heading">
-              <h2>Our team <em>members</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team-image-1-646x680.jpg" alt="">
-              <div class="down-content">
-                <h4>William Smith</h4>
-                <span>Co-Founder</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
-
-                <p>
-                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team-image-2-646x680.jpg" alt="">
-              <div class="down-content">
-                <h4>Mary Houston</h4>
-                <span>Chief Marketing Officer</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
-                <p>
-                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="team-item">
-              <img src="assets/images/team-image-3-646x680.jpg" alt="">
-              <div class="down-content">
-                <h4>John Doe</h4>
-                <span>Financial Analyst</span>
-                <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
-                <p>
-                  <a href="#"><span><i class="fa fa-linkedin"></i></span></a>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="col-md-8">
+        <section class='tabs-content'>
+          <article id='tabs-1'>
+            <img src="assets/images/purple model x.jpeg" alt="">
+            <h4><a href="blog-details.html">Suspension, brakes, alignment, exhaust, wheel and tire packages, diagnostic, drivetrain, tune ups, performance and much more.</a></h4>
+            <p>Daily driver, weekend driver, work truck or super car; our skilled technicians take pride in completing their work to your satisfaction from start to finish using top class equipment and technique.</p>
+          </article>
+          <article id='tabs-2'>
+            <img src="assets/images/blog-image-2-940x460.jpg" alt="">
+            <h4><a href="blog-details.html">Mauris lobortis quam id dictum dignissim</a></h4>
+            <p>Sed ut dolor in augue cursus ultrices. Vivamus mauris turpis, auctor vel facilisis in, tincidunt vel diam. Sed vitae scelerisque orci. Nunc non magna orci. Aliquam commodo mauris ante, quis posuere nibh vestibulum sit amet</p>
+          </article>
+          <article id='tabs-3'>
+            <img src="assets/images/blog-image-3-940x460.jpg" alt="">
+            <h4><a href="blog-details.html">Class aptent taciti sociosqu ad litora torquent per</a></h4>
+            <p>Mauris lobortis quam id dictum dignissim. Donec pellentesque erat dolor, cursus dapibus turpis hendrerit quis. Suspendisse at suscipit arcu. Nulla sed erat lectus. Nulla facilisi. In sit amet neque sapien. Donec scelerisque mi at gravida efficitur. Nunc lacinia a est eu malesuada. Curabitur eleifend elit sapien, sed pulvinar orci luctus eget. 
+            </p>
+          </article>
+        </section>
       </div>
     </div>
 
