--- a/contact.html
+++ b/contact.html
@@ -119,8 +119,8 @@
             <div class="contact-item">
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">+1 333 4040 5566</a>
+              <p>We are open from Tues-Fri: 9am-6pm | Sat: 9am-3pm | Sun-Mon: Closed</p>
+              <a href="#">301 604 5004</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -128,14 +128,14 @@
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
               <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
-              <a href="#">contact@company.com</a>
+              <a href="#">chris@eliteimportz.com</a>
             </div>
           </div>
           <div class="col-md-4">
             <div class="contact-item">
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
-              <p>212 Barrington Court New York str <br> USA</p>
+              <p>3248 Laurel Fort Meade Rd. <br> Laurel, MD 20724</p>
               <a href="#">View on Google Maps</a>
             </div>
           </div>
