--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
             <div class="contact-item">
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
-              <p>Vivamus ut tellus mi. Nulla nec cursus elit, id vulputate nec cursus augue.</p>
+              <p>Reach out to us via email, and we will get back to you as soon as we can.</p>
               <a href="#">chris@eliteimportz.com</a>
             </div>
           </div>
