--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
           <div class="col-md-12">
             <div class="section-heading">
               <h2>Send us a <em>message</em></h2>
-              <span>Suspendisse a ante in neque iaculis lacinia</span>
+              <span>Let us know how we can help!</span>
             </div>
           </div>
           <div class="col-md-12">
