--- a/gear.html
+++ b/gear.html
@@ -115,16 +115,16 @@
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Our team <em>members</em></h2>
+              <h2> <em> Elite </em> Gear</h2>
               <span>Suspendisse a ante in neque iaculis lacinia</span>
             </div>
           </div>
           <div class="col-md-4">
             <div class="team-item">
-              <img src="assets/images/team-image-1-646x680.jpg" alt="">
+              <img src="assets/images/blackhoodie.webp" alt="">
               <div class="down-content">
-                <h4>William Smith</h4>
-                <span>Co-Founder</span>
+                <h4>Elite Clean Hoodie</h4>
+                <span>$50</span>
                 <p>In sem sem, dapibus non lacus auctor, ornare sollicitudin lacus. Aliquam ipsum urna, semper quis.</p>
 
                 <p>
