--- a/service.html
+++ b/service.html
@@ -110,30 +110,32 @@
       </div>
     </div>
 
-    <div class="service">
-      <div>Routine and Factory Scheduled Maintenance</div>
-      <div>Timing belts / Tune up</div>
-      <div>Exhaust Systems</div>
-    </div>
-    <div class="service">
-      <div>Suspension Upgrades</div>
-      <div>Lowering Kits / Lift Kits</div>
-      <div>Aftermarket Wheels- Custom, Off-road Rims and Tires</div>
-    </div>
-    <div class="service">
-      <div>Performance Upgrades</div>
-      <div>Tire Mounting and Balancing - Up to 30 inch wheels</div>
-      <div>Hunter Road Force Tire Balancing</div>
-    </div>
-    <div class="service">
-      <div>Fender Rolling</div>
-      <div>In Ground Hunter Alignment System / Custom Alignments</div>
-      <div>Brake Systems / Brake Upgrades</div>
-    </div>
-    <div class="service">
-      <div>Full Engine Service and Repair</div>
-      <div>Transmission and Drivetrain</div>
-      <div>Vehicle Lighting Upgrades</div>
+    <div class="service-list">
+      <div class="service-row">
+        <div class="service">Routine and Factory Scheduled Maintenance</div>
+        <div class="service">Timing belts / Tune up</div>
+        <div class="service">Exhaust Systems</div>
+      </div>
+      <div class="service-row">
+        <div class="service">Suspension Upgrades</div>
+        <div class="service">Lowering Kits / Lift Kits</div>
+        <div class="service">Aftermarket Wheels- Custom, Off-road Rims and Tires</div>
+      </div>
+      <div class="service-row">
+        <div class="service">Performance Upgrades</div>
+        <div class="service">Tire Mounting and Balancing - Up to 30 inch wheels</div>
+        <div class="service">Hunter Road Force Tire Balancing</div>
+      </div>
+      <div class="service-row">
+        <div class="service">Fender Rolling</div>
+        <div class="service">In Ground Hunter Alignment System / Custom Alignments</div>
+        <div class="service">Brake Systems / Brake Upgrades</div>
+      </div>
+      <div class="service-row">
+        <div>Full Engine Service and Repair</div>
+        <div>Transmission and Drivetrain</div>
+        <div>Vehicle Lighting Upgrades</div>
+      </div>
     </div>
 
     <!-- Footer Starts Here -->
