--- a/service.html
+++ b/service.html
@@ -112,7 +112,10 @@
 
     <div class="service-list">
       <div class="service-row">
-        <div class="service">Routine and Factory Scheduled Maintenance</div>
+        <div class="service">
+          <img src="assets/images/maintenance.png" alt>
+          <p>Routine and Factory Scheduled Maintenance</p> 
+        </div>
         <div class="service">Timing belts / Tune up</div>
         <div class="service">Exhaust Systems</div>
       </div>
