--- a/detailing.html
+++ b/detailing.html
@@ -70,7 +70,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="service.html">Service</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="detailing.html">Detailing</a>
               </li>
               <li class="nav-item">
@@ -79,12 +79,12 @@
               <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
-              <li class="nav-item dropdown active">
+              <li class="nav-item dropdown">
                 <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">About</a>
               
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="about.html">About Us</a>
-                    <a class="dropdown-item active" href="team.html">Team</a>
+                    <a class="dropdown-item" href="team.html">Team</a>
                     <a class="dropdown-item" href="testimonials.html">Testimonials</a>
                     <a class="dropdown-item" href="faq.html">FAQ</a>
                 </div>
