--- a/faq.html
+++ b/faq.html
@@ -86,7 +86,7 @@
                     <a class="dropdown-item" href="about.html">About Us</a>
                     <a class="dropdown-item" href="team.html">Team</a>
                     <a class="dropdown-item" href="testimonials.html">Testimonials</a>
-                    <a class="dropdown-item" href="faq.html">FAQ</a>
+                    <a class="dropdown-item active" href="faq.html">FAQ</a>
                 </div>
               </li>
               <li class="nav-item">
