--- a/car-details.html
+++ b/car-details.html
@@ -354,9 +354,9 @@
             <h4>Car Dealer Website</h4>
             <p>Vivamus tellus mi. Nulla ne cursus elit,vulputate. Sed ne cursus augue hasellus lacinia sapien vitae.</p>
             <ul class="social-icons">
-              <li><a rel="nofollow" href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+              <li><a href="https://www.facebook.com/eliteimportz" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <li><a href="https://www.instagram.com/eliteimportz/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+              <li><a href="https://www.youtube.com/user/crza81" target="_blank"><i class="fa fa-youtube"></i></a></li>
             </ul>
           </div>
           <div class="col-md-3 footer-item">
