--- a/gear.html
+++ b/gear.html
@@ -206,8 +206,8 @@
               </div>
             </div>
           </div>
-          <div class="row">
-            
+        </div>
+        <div class="row">
           <div class="col-md-4">
             <div class="team-item">
               <img src="assets/images/eliterx7t.webp" alt="" />
