--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
               <i class="fa fa-phone"></i>
               <h4>Phone</h4>
               <p>We are open from Tues-Fri: 9am-6pm | Sat: 9am-3pm | Sun-Mon: Closed</p>
-              <a href="#">(301)604-5004</a>
+              <a href="tel:301-604-5004">(301)604-5004</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -126,7 +126,7 @@
               <i class="fa fa-envelope"></i>
               <h4>Email</h4>
               <p>Reach out to us via email, and we will get back to you as soon as we can.</p>
-              <a href="#">chris@eliteimportz.com</a>
+              <a href="mailto:chris@eliteimportz.com">chris@eliteimportz.com</a>
             </div>
           </div>
           <div class="col-md-4">
@@ -134,7 +134,7 @@
               <i class="fa fa-map-marker"></i>
               <h4>Location</h4>
               <p>3248 Laurel Fort Meade Rd. <br> Laurel, MD 20724</p>
-              <a href="#">View on Google Maps</a>
+              <a href="https://www.google.com/maps/dir/Elite+Auto+Service/">View on Google Maps</a>
             </div>
           </div>
         </div>
