--- a/detailing.html
+++ b/detailing.html
@@ -114,7 +114,7 @@
         <section class='tabs-content-1'>
           <article id='tabs-1'>
             <img src="assets/images/purple model x.jpeg" alt="">
-            <h4><a href="blog-details.html">Our Process</a></h4>
+            <h4><a>Our Process</a></h4>
             <p>The 
                 <strong> Flawless Finish</strong> mobile detailing van is racking up the miles navigating the DMV each day providing friendly mobile detailing services, competitively priced and promptly delivered to the high standards you’ve come to expect from Elite.</p>
           </article>
